# bnp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  look_for_not_assigned.ipynb  releves.tar.gz.gpg  salaire-savings-debits.ipynb  save.sh  ventilation.ipynb
.github/workflows/: ci.yml  publish.yml
releves/: salaire-savings-debits.ipynb  ventilation.ipynb
src/: jobs.rs  lib.rs  main.rs  migrate.rs
src/jobs/: check.rs  cli.rs  config.rs  csv.rs  enclosing_dates.rs  iomodel.rs  model.rs  parse_page.rs  process.rs  scan.rs  solde.rs  test.rs  total_des_operations.rs  xml_model.rs
src/migrate/: migrate.rs  old_iomodel.rs
src/parser/: mod.rs  model.rs  parse.rs
src/util/: env.rs  error.rs
src/ventilation/: mod.rs  model.rs  ventilate.rs
tests/: compute_year_test.rs  ventilate.rs
