[package]
name = "mybnp"
version = "0.2.0"
edition = "2024"
description = "Parse BNP Paribas bank statements (PDF) and extract operations"
license = "MIT"
repository = "https://github.com/laurentcarrie/bnp"

[[bin]]
name = "mybnp"
path = "src/main.rs"

[dependencies]
pdf-extract = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
