[package]
name = "my-bank-statements"
version = "0.0.1"
edition = "2024"
description = "Parse BNP Paribas bank statements (PDF) and extract operations. Ventilate according to a description"
license = "MIT"
repository = "https://github.com/laurentcarrie/my-bank-statements"

[[bin]]
name = "my-bank-statements-parser"
path = "src/bin/my-bank-statements-parser.rs"

[[bin]]
name = "my-bank-statements-ventilate"
path = "src/bin/my-bank-statements-ventilate.rs"

[[bin]]
name = "my-bank-statements-add-patterns"
path = "src/bin/my-bank-statements-add-patterns.rs"

[dependencies]
pdf-extract = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
